--- a/set_covering_assignment/set-covering.ipynb
+++ b/set_covering_assignment/set-covering.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1197,
+   "execution_count": 1178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,64 +25,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1198,
+   "execution_count": 1179,
    "metadata": {},
    "outputs": [],
    "source": [
-    "PROBLEM_SIZE = 20\n",
-    "NUM_SETS = 40\n",
-    "SETS = [\n",
+    "PROBLEM_SIZE = 10\n",
+    "NUM_SETS = 10\n",
+    "SETS = tuple(\n",
     "    np.array([random() < 0.3 for _ in range(PROBLEM_SIZE)]) for _ in range(NUM_SETS)\n",
-    "]\n",
-    "# SETS = [np.array([True, True, True, True, True, True, False, False, False]),\n",
-    "#         np.array([True, True, True, True, False, False, False, False, True]),\n",
-    "#         np.array([False, False, False, False, True, True, True, True, False])]\n",
+    ")\n",
+    "\n",
     "State = namedtuple(\"State\", [\"taken\", \"not_taken\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1199,
+   "execution_count": 1180,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def goal_check(state):\n",
-    "    return np.all(\n",
-    "        reduce(\n",
-    "            np.logical_or,\n",
-    "            [SETS[i] for i in state.taken],\n",
-    "            np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "        )\n",
+    "# find if exist a possible solution\n",
+    "def goal_check(state):      \n",
+    "    return np.all(total_state(state.taken))\n",
+    "\n",
+    "# find how many false it takes\n",
+    "def distance(state):         \n",
+    "    return PROBLEM_SIZE - sum(state)\n",
+    "\n",
+    "\n",
+    "# compute logical or between all the set taken in the current state\n",
+    "def total_state(state):     \n",
+    "    return reduce(\n",
+    "        np.logical_or,\n",
+    "        [SETS[i] for i in state],\n",
+    "        np.array([False for _ in range(PROBLEM_SIZE)]),\n",
     "    )\n",
     "\n",
     "\n",
-    "def distance(state):\n",
-    "    return PROBLEM_SIZE - sum(\n",
-    "        reduce(\n",
-    "            np.logical_or,\n",
-    "            [SETS[i] for i in state.taken],\n",
-    "            np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "        )\n",
+    "# key function to sort the untaken set of the current state using the amount of overlapping with the taken set and\n",
+    "# the distance of the untaken set \n",
+    "def sorting_for_overlapping(e, state):      \n",
+    "    return sum(np.logical_and(state, SETS[e]))+ distance(SETS[e])\n",
+    "\n",
+    "\n",
+    "def function(current_state):\n",
+    "    tot_current_state = total_state(current_state.taken)\n",
+    "\n",
+    "    sorted_untaken = sorted(\n",
+    "        current_state.not_taken, key=lambda e: sorting_for_overlapping(e, tot_current_state)\n",
     "    )\n",
     "\n",
+    "    h = 0\n",
+    "    # h is the number of untaken sets necessary to cover all the remaining false of the current state\n",
+    "    # the untaken sets were sorted, so if one of them can fill the state, it will be the first of the list\n",
+    "    for action in sorted_untaken:\n",
+    "        if distance(tot_current_state) == 0:\n",
+    "            break\n",
+    "        tot_current_state = np.logical_or(tot_current_state, SETS[action])\n",
+    "        h += 1\n",
     "\n",
-    "def g(state, action):\n",
-    "    return sum(\n",
-    "        reduce(\n",
-    "            np.logical_and,\n",
-    "            reduce(\n",
-    "                np.logical_or,\n",
-    "                [SETS[i] for i in state],\n",
-    "                np.array([False for _ in range(PROBLEM_SIZE)]),\n",
-    "            ),\n",
-    "            SETS[action],\n",
-    "        )\n",
-    "    )"
+    "\n",
+    "    # h is my heuristic, the g of the A* algorithm is the number of taken state\n",
+    "    return h + len(current_state.taken)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1200,
+   "execution_count": 1181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,232 +100,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1201,
+   "execution_count": 1182,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sort SETS considering the number of false of each single set\n",
     "def sorting_key(e):\n",
     "    return e.sum()\n",
     "\n",
+    "\n",
     "def get_ordered_sets():\n",
-    "    SETS.sort(reverse=True, key=sorting_key)"
+    "    return sorted(SETS, reverse=True, key=sorting_key)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1202,
+   "execution_count": 1183,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to force some blocks if these are the only ones which cover some True position\n",
+    "def get_mandatory_blocks():\n",
+    "    unic_list = np.vstack(SETS).sum(0)\n",
+    "\n",
+    "    if 1 not in unic_list:\n",
+    "        return State(set(), set(range(NUM_SETS)))\n",
+    "\n",
+    "    ind = [\n",
+    "        index\n",
+    "        for index, s in enumerate(SETS)\n",
+    "        if any(unic_list[i] == 1 and s[i] == True for i in range(PROBLEM_SIZE))\n",
+    "    ]\n",
+    "    return State(set(ind), set(range(NUM_SETS)) - set(ind))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "find_solution\n",
-      "Solved in 821 steps (4 tiles)\n"
+      "Solved in 1 steps (4 tiles)\n"
      ]
     }
    ],
    "source": [
     "frontier = PriorityQueue()\n",
-    "solutions = PriorityQueue()\n",
-    "get_ordered_sets()\n",
+    "SETS = get_ordered_sets()\n",
+    "state = get_mandatory_blocks()\n",
     "\n",
-    "state = State(set(), set(range(NUM_SETS)))\n",
+    "frontier.put((function(state), state))\n",
     "\n",
-    "frontier.put((distance(state), state))\n",
-    "wrong = []\n",
     "\n",
-    "counter = 0\n",
     "_, current_state = frontier.get()\n",
-    "\n",
-    "while counter==0 or not frontier.empty():\n",
-    "    if  solutions.empty() or len(current_state[0]) + 1 < solutions.queue[0][0]:\n",
-    "        counter += 1\n",
-    "        for action in current_state[1]:\n",
-    "            new_state = State(\n",
-    "                current_state.taken ^ {action},\n",
-    "                current_state.not_taken ^ {action},\n",
-    "            )\n",
-    "            \n",
-    "            if len(wrong)==0 or sorted(new_state[0]) not in wrong:\n",
-    "                g_res = g(current_state[0], action)\n",
-    "                d = distance(new_state)\n",
-    "\n",
-    "                frontier.put((d + g_res, new_state))\n",
-    "    \n",
-    "                if d == 0:\n",
-    "                    print(\"find_solution\")\n",
-    "                    solutions.put((len(new_state[0]), new_state[0]))\n",
-    "                    break\n",
+    "counter = 0 \n",
+    "solution = None if not goal_check(current_state) else current_state\n",
     "\n",
     "\n",
-    "    if not solutions.empty() and (solutions.queue[0][0] == 1 or solutions.queue[0][0] == 2):\n",
-    "        break\n",
+    "while solution is None:\n",
+    "    counter += 1\n",
+    "    for action in current_state[1]:\n",
+    "        new_state = State(\n",
+    "            current_state.taken ^ {action},\n",
+    "            current_state.not_taken ^ {action},\n",
+    "        )\n",
+    " \n",
+    "        frontier.put((function(new_state), new_state))\n",
+    "        \n",
+    "        if distance(total_state(new_state.taken)) == 0:\n",
+    "            solution = new_state\n",
+    "            break\n",
     "    _, current_state = frontier.get()\n",
-    "    wrong.append(sorted(current_state[0]))\n",
-    "  \n",
-    "    \n",
     "\n",
-    "print(f\"Solved in {counter:,} steps ({solutions.queue[0][0]} tiles)\")"
+    "\n",
+    "\n",
+    "print(f\"Solved in {counter:,} steps ({len(solution.taken)} tiles)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1203,
+   "execution_count": 1185,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(4, {0, 1, 2, 3})]"
+       "{0, 1, 2, 3}"
       ]
      },
-     "execution_count": 1203,
+     "execution_count": 1185,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solutions.queue"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1204,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ True,  True, False,  True,  True, False, False, False, False,\n",
-       "         True,  True, False, False, False,  True,  True, False,  True,\n",
-       "        False,  True]),\n",
-       " array([False,  True,  True, False,  True, False,  True, False,  True,\n",
-       "        False, False,  True,  True, False, False,  True, False, False,\n",
-       "        False,  True]),\n",
-       " array([ True, False, False, False, False,  True,  True, False, False,\n",
-       "        False, False,  True,  True,  True,  True, False, False,  True,\n",
-       "         True, False]),\n",
-       " array([False,  True, False, False,  True, False,  True,  True,  True,\n",
-       "        False,  True,  True, False, False, False, False,  True, False,\n",
-       "        False,  True]),\n",
-       " array([ True, False, False, False,  True,  True, False,  True, False,\n",
-       "        False, False,  True, False, False,  True, False, False,  True,\n",
-       "         True,  True]),\n",
-       " array([False, False,  True,  True, False,  True, False,  True, False,\n",
-       "        False,  True, False, False,  True,  True,  True, False,  True,\n",
-       "        False, False]),\n",
-       " array([False,  True, False, False, False,  True,  True, False,  True,\n",
-       "        False, False, False,  True,  True,  True, False, False, False,\n",
-       "         True, False]),\n",
-       " array([False, False, False, False, False,  True,  True,  True, False,\n",
-       "        False, False, False,  True,  True,  True,  True, False, False,\n",
-       "        False,  True]),\n",
-       " array([ True, False, False, False, False, False,  True,  True, False,\n",
-       "         True,  True, False, False, False, False, False, False,  True,\n",
-       "        False,  True]),\n",
-       " array([False, False, False, False, False,  True, False,  True, False,\n",
-       "        False, False,  True,  True, False, False,  True, False,  True,\n",
-       "         True, False]),\n",
-       " array([ True,  True, False, False, False,  True,  True, False,  True,\n",
-       "        False, False, False,  True, False, False,  True, False, False,\n",
-       "        False, False]),\n",
-       " array([ True, False, False,  True, False, False,  True, False,  True,\n",
-       "        False,  True,  True,  True, False, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([ True, False,  True, False, False, False, False, False, False,\n",
-       "        False, False,  True,  True, False,  True,  True, False, False,\n",
-       "        False,  True]),\n",
-       " array([ True,  True,  True,  True, False, False, False, False,  True,\n",
-       "        False, False, False, False, False, False, False, False,  True,\n",
-       "         True, False]),\n",
-       " array([False, False, False, False,  True, False, False, False,  True,\n",
-       "         True,  True, False,  True, False,  True, False, False, False,\n",
-       "        False,  True]),\n",
-       " array([False,  True,  True,  True, False,  True, False, False,  True,\n",
-       "        False, False,  True, False, False, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False, False,  True, False, False,  True,\n",
-       "         True, False, False, False,  True, False, False, False,  True,\n",
-       "        False,  True]),\n",
-       " array([False,  True, False, False,  True, False, False, False,  True,\n",
-       "         True, False, False,  True, False, False, False, False,  True,\n",
-       "        False, False]),\n",
-       " array([False, False, False,  True, False, False, False, False, False,\n",
-       "        False, False, False,  True,  True,  True,  True, False, False,\n",
-       "        False,  True]),\n",
-       " array([False, False, False, False, False, False, False, False,  True,\n",
-       "         True, False, False,  True, False,  True,  True, False, False,\n",
-       "         True, False]),\n",
-       " array([False, False, False, False, False, False, False,  True, False,\n",
-       "         True, False,  True, False, False, False,  True, False, False,\n",
-       "        False,  True]),\n",
-       " array([ True,  True, False, False, False, False, False, False, False,\n",
-       "        False, False, False,  True, False, False, False, False, False,\n",
-       "         True,  True]),\n",
-       " array([ True,  True, False, False, False, False, False, False,  True,\n",
-       "         True, False, False, False, False,  True, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False,  True, False,  True, False, False, False,\n",
-       "        False, False, False, False,  True,  True, False, False, False,\n",
-       "        False,  True]),\n",
-       " array([False, False,  True,  True, False, False, False, False, False,\n",
-       "         True, False,  True, False,  True, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False, False, False, False,  True, False,\n",
-       "        False, False, False,  True, False, False,  True,  True, False,\n",
-       "         True, False]),\n",
-       " array([ True, False, False, False, False,  True,  True,  True, False,\n",
-       "        False, False, False, False, False, False,  True, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False,  True, False,  True,  True,  True,\n",
-       "        False,  True, False, False, False, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False,  True, False,  True, False, False, False, False,\n",
-       "        False, False, False,  True, False, False, False,  True, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False, False, False, False,  True, False,\n",
-       "        False, False, False, False, False,  True, False,  True, False,\n",
-       "        False,  True]),\n",
-       " array([False,  True, False, False, False, False, False,  True, False,\n",
-       "        False, False, False, False, False, False, False,  True, False,\n",
-       "        False,  True]),\n",
-       " array([False, False,  True, False, False, False, False, False, False,\n",
-       "         True, False, False,  True, False, False, False,  True, False,\n",
-       "        False, False]),\n",
-       " array([False, False,  True,  True, False, False,  True, False, False,\n",
-       "        False, False, False, False, False, False, False, False,  True,\n",
-       "        False, False]),\n",
-       " array([ True, False, False, False, False,  True, False, False, False,\n",
-       "        False, False, False, False, False, False,  True, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False,  True, False, False,  True, False, False,\n",
-       "        False, False, False, False, False, False, False, False,  True,\n",
-       "        False, False]),\n",
-       " array([False,  True,  True, False, False, False, False, False, False,\n",
-       "        False, False,  True, False, False, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False,  True, False, False, False, False, False,\n",
-       "        False,  True, False, False, False, False, False, False,  True,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False,  True,  True, False, False, False,\n",
-       "        False, False, False, False, False,  True, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False,  True,  True, False, False, False, False,\n",
-       "        False, False, False, False, False, False, False, False, False,\n",
-       "        False, False]),\n",
-       " array([False, False, False, False, False,  True, False, False, False,\n",
-       "        False, False, False, False, False, False, False, False, False,\n",
-       "        False, False])]"
-      ]
-     },
-     "execution_count": 1204,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SETS"
+    "solution.taken"
    ]
   }
  ],
