--- a/HalloweenChallenge/Halloween.ipynb
+++ b/HalloweenChallenge/Halloween.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,12 +58,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
-    "problem_dim=100\n",
-    "num_sets=100\n",
+    "problem_dim=1000\n",
+    "num_sets=1000\n",
     "fitness_counter=0\n",
     "x = make_set_covering_problem(problem_dim, num_sets, .3)\n",
     "\n",
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,9 +95,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c6e9342729b54931b16d4a1c18f856df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/200 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 10\n",
+      "9 1939\n",
+      "solution found in 1993 calls,solution has length 9\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "def fitness(state):\n",
@@ -135,7 +159,7 @@
     "actual_best_sol = None\n",
     "T_start=10000\n",
     "fitness_counter=0\n",
-    "n_run = 95\n",
+    "n_run = 200\n",
     "\n",
     "first_ind= randint(0, num_sets-1)\n",
     "current_state=([first_ind], get_set(first_ind))\n",
@@ -149,7 +173,7 @@
     "        T=T_start\n",
     "        new_state_eval= fitness(new_state[1])\n",
     "        current_state_eval = fitness(current_state[1])\n",
-    "        while step<=5 and (new_state_eval >= current_state_eval or np.exp(-(current_state_eval[1]-new_state_eval[1])/T)>random()) :\n",
+    "        while step<=10 and (new_state_eval >= current_state_eval or np.exp(-(current_state_eval[1]-new_state_eval[1])/T)>random()) :\n",
     "            if T==0:\n",
     "                print(\"ho freddo, temperatura a zero!!\")\n",
     "                break\n",
@@ -161,14 +185,14 @@
     "\n",
     "                if d==0 or (actual_best_sol is not None and len(new_state[0])>=len(actual_best_sol)):\n",
     "                    break\n",
-    "                new_state_eval= fitness(new_state[1])\n",
-    "                current_state_eval = fitness(current_state[1])\n",
+    "                current_state_eval = new_state_eval\n",
+    "                new_state_eval= fitness(new_state[1])   \n",
     "                T=1/np.log(1+step)*T\n",
     "        if d==0:\n",
     "            if actual_best_sol is None or len(new_state[0])<len(actual_best_sol):\n",
     "                actual_best_sol = new_state[0]\n",
     "                print(len(actual_best_sol), fitness_counter)\n",
-    "                \n",
+    "                ''\n",
     "            current_state=(new_state[0][0], get_set(new_state[0][0]))\n",
     "\n",
     "\n",
