--- a/lab2/lab2-nim.ipynb
+++ b/lab2/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 482,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 483,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 484,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 485,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 486,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 487,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,44 +171,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 488,
    "metadata": {},
    "outputs": [],
    "source": [
     "# values is a vector with the probalities to choose each rule\n",
     "\n",
+    "\n",
     "def first_strategy(state, values):\n",
-    "    # find all the possible secure moves (as the optimal strategy, but we don't choose the move randomly) \n",
+    "    # find all the possible secure moves (as the optimal strategy, but we don't choose the move randomly)\n",
     "    analysis = analize(state)\n",
     "    logging.debug(f\"analysis:\\n{pformat(analysis)}\")\n",
     "    spicy_moves = [ply for ply, ns in analysis[\"possible_moves\"].items() if ns != 0]\n",
     "    if not spicy_moves:\n",
     "        spicy_moves = list(analysis[\"possible_moves\"].keys())\n",
     "    rule = np.random.choice(len(values), p=values)\n",
-    "    if rule == 0:       # choose the secure moves which take from the last possible row\n",
+    "    if rule == 0:  # choose the secure moves which take from the last possible row\n",
     "        return max(spicy_moves, key=lambda e: e.row)\n",
-    "    if rule == 1:       # choose the secure moves which take more objects\n",
+    "    if rule == 1:  # choose the secure moves which take more objects\n",
     "        return max(spicy_moves, key=lambda e: e.num_objects)\n",
-    "    if rule == 2:       # choose the secure moves which take less objects\n",
+    "    if rule == 2:  # choose the secure moves which take less objects\n",
     "        return min(spicy_moves, key=lambda e: e.num_objects)\n",
-    "    return min(spicy_moves, key=lambda e: e.row)    # choose the secure moves which take from the first possible row\n",
+    "    return min(\n",
+    "        spicy_moves, key=lambda e: e.row\n",
+    "    )  # choose the secure moves which take from the first possible row\n",
     "\n",
     "\n",
     "def second_strategy(state: Nim, values):\n",
     "    rule = np.random.choice(len(values), p=values)\n",
     "\n",
-    "    possible_moves = [      # find all the possible moves\n",
+    "    possible_moves = [  # find all the possible moves\n",
     "        [i, state._rows[i] if state._k is None else min(state._rows[i], state._k)]\n",
     "        for i in range(len(state._rows))\n",
     "        if state._rows[i] != 0\n",
     "    ]\n",
-    "    if rule == 0:       # choose the secure moves which take from the last possible row\n",
+    "    if rule == 0:  # choose moves which take from the last possible row\n",
     "        ply = max(possible_moves, key=lambda e: e[0])\n",
-    "    elif rule == 1:     # choose the secure moves which take more objects\n",
+    "    elif rule == 1:  # choose moves which take more objects\n",
     "        ply = max(possible_moves, key=lambda e: e[1])\n",
-    "    elif rule == 2:     # choose the secure moves which take less objects\n",
+    "    elif rule == 2:  # choose moves which take less objects\n",
     "        ply = min(possible_moves, key=lambda e: e[1])\n",
-    "    else:               # choose the secure moves which take from the first possible row\n",
+    "    else:  # choose moves which take from the first possible row\n",
     "        ply = min(possible_moves, key=lambda e: e[0])\n",
     "\n",
     "    return Nimply(ply[0], ply[1])"
@@ -216,80 +219,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 489,
    "metadata": {},
    "outputs": [],
    "source": [
+    "μ = 10\n",
+    "λ = 20\n",
+    "σ = 1\n",
+    "N_rule = 4\n",
     "N_Train = 100\n",
     "\n",
     "# the fitness is given from the number of match win against the optimal strategy with the probability to choose one of the four possible rule in values vector\n",
+    "\n",
     "def fitness(values):\n",
-    "    count =0\n",
-    "    for i in range(N_Train):\n",
-    "        logging.getLogger().setLevel(logging.INFO)\n",
+    "    count = 0\n",
+    "\n",
+    "    for _ in range(N_Train):\n",
     "        nim = Nim(5)\n",
     "        player = 0\n",
     "        while nim:\n",
-    "            ply = optimal(nim) if player==0 else second_strategy(nim, values)\n",
+    "            ply = optimal(nim) if player == 0 else second_strategy(nim, values)\n",
     "            nim.nimming(ply)\n",
     "            player = 1 - player\n",
     "        if player == 1:\n",
-    "            count+=1\n",
-    "   \n",
-    "    return count\n",
-    "        \n",
-    "        \n",
-    "    "
+    "            count += 1\n",
+    "\n",
+    "    return (count*100)/N_Train\n",
+    "\n",
+    "\n",
+    "def mutation(population):\n",
+    "    offspring = []\n",
+    "\n",
+    "    for _ in range(λ):\n",
+    "        off = population[np.random.randint(0, μ)][0]\n",
+    "        off[-1] = np.random.normal(loc=off[-1], scale=0.2)\n",
+    "        off[ -1] = 1e-5 if off[-1] < 1e-5 else off[-1]\n",
+    "        offspring_noise = np.abs(\n",
+    "            np.random.normal(loc=off[:N_rule], scale=off[-1])\n",
+    "        )  # find the gaussian noise\n",
+    "        offspring_noise = list(\n",
+    "            offspring_noise / np.sum(offspring_noise)\n",
+    "        )  # the sum of the new probabilities must be 1\n",
+    "        offspring.append([offspring_noise, fitness(offspring_noise),off[-1]])\n",
+    "\n",
+    "    return offspring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 490,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Probabilities: [0.5326651  0.45845002 0.00888489 0.        ]\n",
-      "Win percentage:50%\n"
+      "Best Probabilities: [0.16043986375010094, 0.8280633001678501, 0.011485412069969921, 1.142401207898165e-05]\n",
+      "Win percentage:50.0%\n"
      ]
     }
    ],
    "source": [
-    "μ = 10\n",
-    "λ = 20\n",
-    "N_rule = 4\n",
-    "\n",
     "def ES_algorithm():\n",
-    "    \n",
-    "    population = np.zeros((μ, N_rule), dtype=np.float32)\n",
+    "    population = []\n",
+    "    best_fitness = None\n",
+    "    best_probabilities = None\n",
     "\n",
-    "    for i in range(μ):\n",
-    "    \n",
-    "        probabilities =  np.random.random(N_rule) \n",
-    "        population[i,:] = probabilities /np.sum(probabilities)\n",
+    "    for _ in range(μ):\n",
+    "        probabilities = list(np.random.dirichlet(np.ones(N_rule)))\n",
+    "        population.append([probabilities, fitness(probabilities), σ])\n",
+    "    step = 0\n",
     "\n",
-    "    for step in range(100):\n",
-    "        offspring = np.zeros((λ, N_rule), dtype=np.float32)\n",
+    "    while best_fitness is None or (best_fitness < 50.0 and step < 250):\n",
+    "        offspring = mutation(population)\n",
     "\n",
-    "        for l in range(λ):\n",
-    "            # mutation\n",
-    "            off= population[np.random.randint(0, μ), :]     # take one random element from the actual population\n",
-    "            offspring_noise = np.random.normal(loc=off, scale=1)    # find the gaussian noise\n",
-    "            offspring_noise = (offspring_noise - np.min(offspring_noise)) /(np.max(offspring_noise) - np.min(offspring_noise))      # scale the noise to be in the range (0, 1)\n",
-    "            offspring[l, :] = offspring_noise/np.sum(offspring_noise)       # the sum of the new probabilities must be 1\n",
-    "        sorted_index= np.argsort(np.apply_along_axis(fitness, axis=1, arr= offspring))\n",
-    "    \n",
-    "        offspring=offspring[sorted_index]\n",
-    "        \n",
-    "# choose the μ best elements from the new elements (considering the results of the fitness) to add them to the population\n",
-    "        population = np.vstack([population, offspring[-μ:]])    \n",
-    "    \n",
-    "    final_fitness = np.apply_along_axis(fitness, axis=1, arr= population)\n",
-    "    best_index= np.argmax(final_fitness)    # find the elements from the population with the highest win percentage\n",
-    "    \n",
-    "    return population[best_index], final_fitness[best_index] \n",
+    "        # parents compete with the new elements\n",
+    "        offspring.extend(population)\n",
+    "        tmp_pop = sorted(offspring, key=lambda e: e[1])\n",
+    "\n",
+    "        if best_fitness is None or tmp_pop[-1][1] > best_fitness:\n",
+    "            best_fitness = tmp_pop[-1][1]\n",
+    "            best_probabilities = tmp_pop[-1][0]\n",
+    "\n",
+    "        # choose the μ best elements (considering the results of the fitness) to add them to the population\n",
+    "        population = tmp_pop[-μ:]\n",
+    "        step += 1\n",
+    "\n",
+    "    return best_probabilities, best_fitness\n",
     "\n",
     "\n",
     "adaptive_player, rating = ES_algorithm()\n",
@@ -297,12 +313,9 @@
     "print(f\"Best Probabilities: {adaptive_player}\\nWin percentage:{rating}%\")\n",
     "\n",
     "\n",
-    "\n",
     "def adaptive(state: Nim) -> Nimply:\n",
     "    \"\"\"A strategy that can adapt its parameters\"\"\"\n",
-    "    return second_strategy(state, adaptive_player)\n",
-    "    \n",
-    "    \n"
+    "    return second_strategy(state, adaptive_player)"
    ]
   },
   {
@@ -314,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 491,
    "metadata": {},
    "outputs": [
     {
@@ -322,17 +335,17 @@
      "output_type": "stream",
      "text": [
       "INFO:root:init : <1 3 5 7 9>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=2)\n",
-      "INFO:root:status: <1 1 5 7 9>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=4)\n",
+      "INFO:root:status: <1 3 5 3 9>\n",
       "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=9)\n",
-      "INFO:root:status: <1 1 5 7 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=2)\n",
-      "INFO:root:status: <1 1 3 7 0>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=7)\n",
-      "INFO:root:status: <1 1 3 0 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=1)\n",
-      "INFO:root:status: <1 0 3 0 0>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=3)\n",
+      "INFO:root:status: <1 3 5 3 0>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=1)\n",
+      "INFO:root:status: <1 3 4 3 0>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=4)\n",
+      "INFO:root:status: <1 3 0 3 0>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=3)\n",
+      "INFO:root:status: <1 3 0 0 0>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=1, num_objects=3)\n",
       "INFO:root:status: <1 0 0 0 0>\n",
       "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=1)\n",
       "INFO:root:status: <0 0 0 0 0>\n",
