--- a/lab2/lab2-nim.ipynb
+++ b/lab2/lab2-nim.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 676,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 677,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 678,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 679,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,11 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# values is a vector with the probalities to choose each rule\n",
+    "# values is a vector with the probabilities to choose each rule\n",
     "\n",
     "\n",
     "def first_strategy(state, values):\n",
@@ -200,6 +200,10 @@
     "def second_strategy(state: Nim, values):\n",
     "    rule = np.random.choice(len(values), p=values)\n",
     "\n",
+    "    # with N_rule=5: debug, it converges to the optimal solution\n",
+    "    # if rule==4:\n",
+    "    #     return optimal(state)\n",
+    "\n",
     "    possible_moves = [  # find all the possible moves\n",
     "        [i, state._rows[i] if state._k is None else min(state._rows[i], state._k)]\n",
     "        for i in range(len(state._rows))\n",
@@ -211,7 +215,7 @@
     "        ply = max(possible_moves, key=lambda e: e[1])\n",
     "    elif rule == 2:  # choose moves which take less objects\n",
     "        ply = min(possible_moves, key=lambda e: e[1])\n",
-    "    else:  # choose moves which take from the first possible row\n",
+    "    elif rule ==3:  # choose moves which take from the first possible row\n",
     "        ply = min(possible_moves, key=lambda e: e[0])\n",
     "\n",
     "    return Nimply(ply[0], ply[1])"
@@ -219,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,36 +250,50 @@
     "\n",
     "    return (count*100)/N_Train\n",
     "\n",
+    "# mutation more similar to the pseudocode in \"essential\"\n",
+    "# def mutation(population):\n",
+    "#     offspring = []\n",
+    "#     for p in population:\n",
+    "#         for _ in range(λ//μ):\n",
+    "#             off = (p[0], np.abs(np.random.normal(loc=p[-1], scale=0.2)))\n",
+    "#             offspring_noise = np.abs(\n",
+    "#                 np.random.normal(loc=off[0], scale=off[1])\n",
+    "#             )  # find the gaussian noise\n",
+    "#             offspring_noise = list(\n",
+    "#                 offspring_noise / np.sum(offspring_noise)\n",
+    "#             )  # the sum of the new probabilities must be 1\n",
+    "#             offspring.append((offspring_noise, fitness(offspring_noise), off[1]))\n",
+    "\n",
+    "#     return offspring\n",
     "\n",
     "def mutation(population):\n",
     "    offspring = []\n",
     "\n",
     "    for _ in range(λ):\n",
-    "        off = population[np.random.randint(0, μ)][0]\n",
-    "        off[-1] = np.random.normal(loc=off[-1], scale=0.2)\n",
-    "        off[ -1] = 1e-5 if off[-1] < 1e-5 else off[-1]\n",
+    "        p = population[np.random.randint(0, μ)]\n",
+    "        off =(p[0], np.abs(np.random.normal(loc=p[-1], scale=0.2)))\n",
     "        offspring_noise = np.abs(\n",
-    "            np.random.normal(loc=off[:N_rule], scale=off[-1])\n",
+    "            np.random.normal(loc=off[0], scale=off[1])\n",
     "        )  # find the gaussian noise\n",
     "        offspring_noise = list(\n",
     "            offspring_noise / np.sum(offspring_noise)\n",
     "        )  # the sum of the new probabilities must be 1\n",
-    "        offspring.append([offspring_noise, fitness(offspring_noise),off[-1]])\n",
+    "        offspring.append((offspring_noise, fitness(offspring_noise),off[1]))\n",
     "\n",
     "    return offspring"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Best Probabilities: [0.16043986375010094, 0.8280633001678501, 0.011485412069969921, 1.142401207898165e-05]\n",
-      "Win percentage:50.0%\n"
+      "Best Probabilities: [0.13863852464267112, 0.8319575645291863, 0.02287571494440402, 0.006528195883738516]\n",
+      "Win percentage:53.0%\n"
      ]
     }
    ],
@@ -287,10 +305,10 @@
     "\n",
     "    for _ in range(μ):\n",
     "        probabilities = list(np.random.dirichlet(np.ones(N_rule)))\n",
-    "        population.append([probabilities, fitness(probabilities), σ])\n",
+    "        population.append((probabilities, fitness(probabilities), σ))\n",
     "    step = 0\n",
     "\n",
-    "    while best_fitness is None or (best_fitness < 50.0 and step < 250):\n",
+    "    while best_fitness is None or (best_fitness < 50.0 and step < 100):\n",
     "        offspring = mutation(population)\n",
     "\n",
     "        # parents compete with the new elements\n",
@@ -303,6 +321,7 @@
     "\n",
     "        # choose the μ best elements (considering the results of the fitness) to add them to the population\n",
     "        population = tmp_pop[-μ:]\n",
+    "\n",
     "        step += 1\n",
     "\n",
     "    return best_probabilities, best_fitness\n",
@@ -327,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
@@ -335,19 +354,19 @@
      "output_type": "stream",
      "text": [
       "INFO:root:init : <1 3 5 7 9>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=4)\n",
-      "INFO:root:status: <1 3 5 3 9>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=4, num_objects=9)\n",
-      "INFO:root:status: <1 3 5 3 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=2, num_objects=1)\n",
-      "INFO:root:status: <1 3 4 3 0>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=4)\n",
-      "INFO:root:status: <1 3 0 3 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=3, num_objects=3)\n",
-      "INFO:root:status: <1 3 0 0 0>\n",
-      "INFO:root:ply: player 1 plays Nimply(row=1, num_objects=3)\n",
-      "INFO:root:status: <1 0 0 0 0>\n",
-      "INFO:root:ply: player 0 plays Nimply(row=0, num_objects=1)\n",
+      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=8)\n",
+      "INFO:root:status: <1 3 5 7 1>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=3, num_objects=7)\n",
+      "INFO:root:status: <1 3 5 0 1>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=2)\n",
+      "INFO:root:status: <1 1 5 0 1>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=0, num_objects=1)\n",
+      "INFO:root:status: <0 1 5 0 1>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=4, num_objects=1)\n",
+      "INFO:root:status: <0 1 5 0 0>\n",
+      "INFO:root:ply: player 1 plays Nimply(row=2, num_objects=5)\n",
+      "INFO:root:status: <0 1 0 0 0>\n",
+      "INFO:root:ply: player 0 plays Nimply(row=1, num_objects=1)\n",
       "INFO:root:status: <0 0 0 0 0>\n",
       "INFO:root:status: Player 1 won!\n"
      ]
