add README for lab10

--- a/lab10/lab10.ipynb
+++ b/lab10/lab10.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,13 +60,13 @@
     "        board[ply.row, ply.col] = player     \n",
     "        return tuple(board.flatten()), check_win(board, player)\n",
     "\n",
-    "def init_match():\n",
+    "def init_match(): # return the empty board, the list of alla possible moves and the player who starts\n",
     "      return np.full((N, N), -1), [Move(i, j) for i in range(N) for j in range(N)], np.random.randint(0, 2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,39 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "43d273462fa44f81a46578443759178c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/20000 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "players = [RandomPlayerTwo(), MyPlayer()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tie: 10.2%, win: 83.4%, lost: 6.4%\n",
-      "6587\n"
+      "tie: 7.4%, win: 86.0%, lost: 6.6%\n"
      ]
     }
    ],
@@ -256,8 +240,7 @@
     "    game= TicTacToe(players[0], players[1])\n",
     "    val=game.game()\n",
     "    match[val]+=1\n",
-    "print(f\"tie: {match[0]/5}%, win: {match[1]/5}%, lost: {match[-1]/5}%\")\n",
-    "print(len(players[1].Q))"
+    "print(f\"tie: {match[0]/5}%, win: {match[1]/5}%, lost: {match[-1]/5}%\")\n"
    ]
   }
  ],
