--- a/quixo/main.ipynb
+++ b/quixo/main.ipynb
@@ -29,46 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "TEST GAMES\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  0%|          | 0/10 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [01:49<00:00, 11.00s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wins: 100.00%, losses: 0.00%\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# testing MyPlayer vs RandomPlayer\n",
     "wins = 0\n",
@@ -88,22 +51,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "HUMAN_ID = 0 # 0 => you start as first, 1 => you start as second\n",
+    "\n",
+    "if HUMAN_ID == 1:\n",
+    "    player0, player1 = MyPlayer(1-HUMAN_ID, max_depth=3, against_human=True), HumanPlayer()\n",
+    "else:\n",
+    "    player0, player1 = HumanPlayer(), MyPlayer(1-HUMAN_ID, max_depth=3, against_human=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Play against MyPlayer\n",
     "g = Game()\n",
-    "player2 = MyPlayer(1, 3, against_human=True)\n",
-    "player1 = HumanPlayer()\n",
-    "print(\"PLAYER 1: \", '\\033[91m', \"X\", '\\033[0m')\n",
-    "print(\"PLAYER 2: \", '\\033[92m', \"O\", '\\033[0m')\n",
-    "winner = g.play(player1, player2)\n",
+    "\n",
+    "print(\"PLAYER 0: \", '\\033[91m', \"X\", '\\033[0m')\n",
+    "print(\"PLAYER 1: \", '\\033[92m', \"O\", '\\033[0m')\n",
+    "winner = g.play(player0, player1)\n",
     "print_board(g)\n",
     "if winner == 0:\n",
-    "    print(\"Player 1 wins\")\n",
+    "    print(\"Player 0 wins\")\n",
     "else:    \n",
-    "    print(\"Player 2 wins\")"
+    "    print(\"Player 1 wins\")"
    ]
   }
  ],
